<resources>
    <string name="app_name">VigilantEyes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Senha:</string>
    <string name="insert_name_here">Inserir nome aqui...</string>
    <string name="insert_password_here">Inserir password aqui...</string>
    <string name="vigilanteyes">VigilantEyes</string>
    <string name="editar">Editar</string>
    <string name="offline">Offline</string>
    <string name="status">Status:</string>
    <string name="example">Example</string>
    <string name="idade">Idade:</string>
    <string name="nome">Nome:</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="profile_picture">Profile picture</string>
    <string name="vigilanteyes_logo">VigilantEyes Logo</string>
    <string name="email">Email:</string>
    <string name="rota">Rota</string>
    <string name="reportar">Reportar</string>
    <string name="perfil">Perfil</string>
    <string name="logout">Logout</string>
    <string name="vigilanteyes_homepage">VigilantEyes Homepage</string>
    <string name="local">Local:</string>
    <string name="descricao">Descrição:</string>
    <string name="adicionar_foto">Adicionar foto</string>
    <string name="submeter">Submeter</string>
    <string name="foto_report">Foto report</string>
    <string name="rotas">Rotas</string>
    <string name="segurancas">Segurancas</string>
    <string name="relatorios">Relatorios</string>
</resources>
