<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    tools:context=".Supervisor.HomeSupervisor">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/vigilanteyes_homepage"
                android:textAlignment="center"
                android:textSize="@dimen/title_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_rota"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/rotas"
                android:drawableTop="@drawable/rota_icon"
                android:onClick="rotaBtnPressed"
                />

            <Button
                android:id="@+id/btn_segurancas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:drawableTop="@drawable/segurancas_icon"
                android:onClick="segurancasBtnPressed"
                android:text="@string/segurancas"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_relatorios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:drawableTop="@drawable/relatorios_icon"
                android:onClick="relatoriosBtnPressed"
                android:text="@string/relatorios"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:drawableTop="@drawable/profile_icon"
                android:onClick="perfilBtnPressed"
                android:text="@string/perfil"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:drawableTop="@drawable/logout_icon"
                android:onClick="logoutBtnPressed"
                android:text="@string/logout"
                android:textAlignment="center" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>

